--- a/3. list_101/Lists Practice.ipynb
+++ b/3. list_101/Lists Practice.ipynb
@@ -1506,8 +1506,522 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "id": "a09c1834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = [1, 2, 3, 4, 5, 6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "c9fe5b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = li[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "15790c99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62a33363",
+   "metadata": {},
+   "source": [
+    "# Binary Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "2b698acc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [2, 4, 7, 9, 11, 12, 16, 19, 20, 24, 29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "1efb6a9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def binary_search(arr, element):\n",
+    "    start = 0\n",
+    "    end = len(arr) - 1\n",
+    "    \n",
+    "    while (start <= end):\n",
+    "        mid = (start+end) // 2\n",
+    "        if (arr[mid] == element):\n",
+    "            return mid\n",
+    "        elif (arr[mid] < element):\n",
+    "            start = mid + 1\n",
+    "        else:\n",
+    "            end = mid - 1\n",
+    "    \n",
+    "    return -1\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "5421e8a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = [2, 4, 7, 9, 11, 12, 16, 19, 20, 24, 29]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "acb63bf8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index = binary_search(arr, 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "d96f2c01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "41af4bfd",
+   "metadata": {},
+   "source": [
+    "# Built in function for search element in a List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "6fd2d5b9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li = [1, 5, 3, 8, 11, 9, 12, 0, 9, 25]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "34ea866f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = li.index(9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "1fc69a21",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "1dccb3a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li.extend('jhon cena')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "8464a9e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 3, 8, 11, 9, 12, 0, 9, 25, 'j', 'h', 'o', 'n', ' ', 'c', 'e', 'n', 'a']"
+      ]
+     },
+     "execution_count": 107,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "9ec94d95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li.append('Kpoco')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "fd77e0d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 5,\n",
+       " 3,\n",
+       " 8,\n",
+       " 11,\n",
+       " 9,\n",
+       " 12,\n",
+       " 0,\n",
+       " 9,\n",
+       " 25,\n",
+       " 'j',\n",
+       " 'h',\n",
+       " 'o',\n",
+       " 'n',\n",
+       " ' ',\n",
+       " 'c',\n",
+       " 'e',\n",
+       " 'n',\n",
+       " 'a',\n",
+       " 'Kpoco']"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "bd8801a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "li.extend([44, 22, 33])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "af8c6a77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 5,\n",
+       " 3,\n",
+       " 8,\n",
+       " 11,\n",
+       " 9,\n",
+       " 12,\n",
+       " 0,\n",
+       " 9,\n",
+       " 25,\n",
+       " 'j',\n",
+       " 'h',\n",
+       " 'o',\n",
+       " 'n',\n",
+       " ' ',\n",
+       " 'c',\n",
+       " 'e',\n",
+       " 'n',\n",
+       " 'a',\n",
+       " 'Kpoco',\n",
+       " 44,\n",
+       " 22,\n",
+       " 33,\n",
+       " 44,\n",
+       " 22,\n",
+       " 33]"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "li"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "b0ed7cef",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "'kpoco' is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1412/2217750566.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msearch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'kpoco'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: 'kpoco' is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "search = li.index('kpoco')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "id": "5be16fef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "search = li.index('Kpoco')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "f1520209",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "469429d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "search = li.index(33)\n",
+    "search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "86ca798f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "93 is not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1412/381487734.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0msearch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mli\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m93\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m: 93 is not in list"
+     ]
+    }
+   ],
+   "source": [
+    "search = li.index(93)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a9ec07e",
+   "metadata": {},
+   "source": [
+    "# Selection Sort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "cd9b5535",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 6, 7, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def selection_sort(arr):\n",
+    "    length = len(arr)\n",
+    "    \n",
+    "    for i in range(length-1):\n",
+    "        min_index = i\n",
+    "        for j in range(i+1, length):\n",
+    "            if (arr[j] < arr[min_index]):\n",
+    "                min_index = j\n",
+    "        arr[i], arr[min_index] = arr[min_index], arr[i]\n",
+    "        \n",
+    "        \n",
+    "arr = [2, 6, 1, 9, 4, 7]\n",
+    "selection_sort(arr)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d753729c",
+   "metadata": {},
+   "source": [
+    "# Merge two sorted arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "6cf9d274",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def merge_sorted_arrays(arr1, arr2):\n",
+    "    i = 0\n",
+    "    j = 0\n",
+    "    len1 = len(arr1)\n",
+    "    len2 = len(arr2)\n",
+    "    \n",
+    "    arr = []\n",
+    "    \n",
+    "    while ((i < len1) and (j < len2)):\n",
+    "        if (arr1[i] < arr2[j]):\n",
+    "            arr.append(arr1[i])\n",
+    "            i += 1\n",
+    "        else:\n",
+    "            arr.append(arr2[j])\n",
+    "            j += 1\n",
+    "    \n",
+    "    while (i < len1):\n",
+    "        arr.append(arr1[i])\n",
+    "        i += 1\n",
+    "        \n",
+    "    while (j < len2):\n",
+    "        arr.append(arr2[j])\n",
+    "        j += 1\n",
+    "    \n",
+    "    return arr\n",
+    "\n",
+    "\n",
+    "arr1 = [2, 7, 10, 12]\n",
+    "arr2 = [1, 5, 9, 11, 13, 15]\n",
+    "arr = merge_sorted_arrays(arr1, arr2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "b83d0d6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5, 7, 9, 10, 11, 12, 13, 15]"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0255168b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1530,6 +2044,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.7"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "093983a1984d3a151085ea6c03ff224f2f46e37a399503257260496608baf474"
+   }
   }
  },
  "nbformat": 4,
